new files added

--- a/LoanJourneyAPI/src/main/resources/application.properties
+++ b/LoanJourneyAPI/src/main/resources/application.properties
@@ -17,6 +17,7 @@ laps.lar.url=http://lapsapi.ktkbank.com:9085/laps/rest/services/larInwardDetails
 laps.users.url=http://lapsapi.ktkbank.com:9085/laps/rest/services/UserOrganisations
 #(DR)laps.users.url=http://172.20.111.166:9085/laps/rest/services/UserOrganisations
 #(PROD)laps.users.url=http://172.16.225.32:9085/laps/rest/services/UserOrganisations
+laps.rousers.url=http://lapsapi.ktkbank.com:9085/laps/rest/services/userorganisations
 laps.authentication=TEFQU0FQSTpMQVBTMTIzNA==
 laps.lar.format=LARNumber
 
